--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: bml
 Type: Package
-Title: Bayesian multiple-membership multilevel models with parameterizable weight function.
+Title: Bayesian multiple-membership multilevel models with parameterizable weight functions.
 Version: 0.2.0
 Author: Benjamin Rosche
 Maintainer: Benjamin Rosche <benrosche@nyu.edu>
-Description: The bml package provides an interface for fitting Bayesian multiple-membership multilevel models with parameterizable weight function using JAGS.
+Description: The bml package provides an interface for fitting Bayesian multiple-membership multilevel models with parameterizable weight functions using JAGS.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
