--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,24 @@ export(mcmcDiag)
 export(mm)
 export(monetPlot)
 export(vars)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
+importFrom(dplyr,all_of)
+importFrom(dplyr,any_of)
+importFrom(dplyr,c_across)
+importFrom(dplyr,everything)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,row_number)
+importFrom(dplyr,rowwise)
+importFrom(dplyr,select)
+importFrom(dplyr,starts_with)
+importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
+importFrom(stats,lag)
+importFrom(stats,mad)
+importFrom(stats,quantile)
+importFrom(stats,runif)
+importFrom(stats,sd)
+importFrom(stats,setNames)
+importFrom(stats,terms)
