--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,10 +25,16 @@ importFrom(dplyr,select)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(rlang,":=")
+importFrom(rlang,.data)
+importFrom(stats,as.formula)
 importFrom(stats,lag)
 importFrom(stats,mad)
+importFrom(stats,median)
+importFrom(stats,model.matrix)
 importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,terms)
+importFrom(stats,var)
